// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design System/TextField DisabledTextField smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #b9cdfc;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 50%;
  cursor: not-allowed;
  height: 3.25rem;
  min-width: 8.75rem;
  background-color: #ffffff;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 0.125rem transparent;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 0 0 0.75rem;
  padding-right: 0.75rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-6 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #1B214F;
  padding: 0;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6:focus::-moz-placeholder {
  color: transparent;
}

.emotion-6:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-6:focus::placeholder {
  color: transparent;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus-within+label,
.emotion-6:not(:placeholder-shown)+label {
  font-weight: 700!important;
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
}

.emotion-6:focus-within+label {
  color: #1552DD;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

.emotion-7 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  color: #686BB3;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  right: 0.1875rem;
  margin: auto;
  white-space: nowrap;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  opacity: 50%;
  color: #686BB3;
  padding: 0.5rem 0 0;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-8 span {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding: 0;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            style="margin: 5px;"
          >
            <div>
              <div
                class="emotion-3"
              >
                <div
                  class="emotion-4"
                >
                  <div
                    class="emotion-5"
                  >
                    <input
                      aria-describedby="textfield_6_hintMessage"
                      aria-invalid="false"
                      class="emotion-6"
                      data-testid="input"
                      disabled=""
                      id="textfield_6"
                      placeholder="Label"
                    />
                    <label
                      class="emotion-7"
                      for="textfield_6"
                    >
                      Label 
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="emotion-8"
                data-testid="error"
              >
                <span
                  id="textfield_6_hintMessage"
                >
                  This field is disabled
                </span>
              </div>
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/TextField MaskedTextFieldDontTest smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #b9cdfc;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: 3.25rem;
  min-width: 8.75rem;
  background-color: #ffffff;
}

.emotion-3:hover {
  background-color: #F5F5FF;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 0.125rem #175bf5;
  background-color: #F5F5FF;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 0 0 0.75rem;
  padding-right: 0.75rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-6 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #1B214F;
  padding: 0;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6:focus::-moz-placeholder {
  color: transparent;
}

.emotion-6:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-6:focus::placeholder {
  color: transparent;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus-within+label,
.emotion-6:not(:placeholder-shown)+label {
  font-weight: 700!important;
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
}

.emotion-6:focus-within+label {
  color: #1552DD;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

.emotion-7 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  color: #686BB3;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  right: 0.1875rem;
  margin: auto;
  white-space: nowrap;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  opacity: 1;
  color: #686BB3;
  padding: 0.5rem 0 0;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-8 span {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding: 0;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            style="margin: 5px;"
          >
            <div
              style="width: 500px;"
            >
              <div>
                <div
                  class="emotion-3"
                >
                  <div
                    class="emotion-4"
                  >
                    <div
                      class="emotion-5"
                    >
                      <input
                        aria-describedby="textfield_3_hintMessage"
                        aria-invalid="false"
                        class="emotion-6"
                        data-testid="input"
                        id="textfield_3"
                        placeholder="Masked TextField"
                        value=""
                      />
                      <label
                        class="emotion-7"
                        for="textfield_3"
                      >
                        Masked TextField 
                      </label>
                    </div>
                  </div>
                </div>
                <div
                  class="emotion-8"
                  data-testid="error"
                >
                  <span
                    id="textfield_3_hintMessage"
                  >
                    Message in Text Field
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/TextField MultiTextField smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #b9cdfc;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: unset;
  min-width: 8.75rem;
  background-color: #ffffff;
  min-height: 3.25rem!important;
}

.emotion-2:hover {
  background-color: #F5F5FF;
}

.emotion-2:focus-within {
  box-shadow: 0 0 0 0.125rem #175bf5;
  background-color: #F5F5FF;
}

.emotion-2 input:focus label {
  font-weight: 700;
  -webkit-transform: translate(0.1875rem, -82%) scale(0.8)!important;
  -moz-transform: translate(0.1875rem, -82%) scale(0.8)!important;
  -ms-transform: translate(0.1875rem, -82%) scale(0.8)!important;
  transform: translate(0.1875rem, -82%) scale(0.8)!important;
  bottom: auto;
}

.emotion-2 label {
  -webkit-transform: translate(0.1875rem, -8px);
  -moz-transform: translate(0.1875rem, -8px);
  -ms-transform: translate(0.1875rem, -8px);
  transform: translate(0.1875rem, -8px);
}

.emotion-3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: 100%;
  padding: 1.3125rem 2.5rem 0.3125rem 0.75rem;
  min-width: 15rem;
}

.emotion-3>div {
  position: relative;
}

.emotion-4 {
  position: static;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  row-gap: 0.25rem;
  z-index: 2;
}

.emotion-5 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #1B214F;
  padding: 0;
  display: block;
  position: relative;
  top: unset;
  z-index: 1;
  text-overflow: ellipsis;
  width: 0;
  min-width: 20%;
  -webkit-flex: 1 1 0%;
  -ms-flex: 1 1 0%;
  flex: 1 1 0%;
}

.emotion-5::-webkit-input-placeholder {
  color: transparent;
}

.emotion-5::-moz-placeholder {
  color: transparent;
}

.emotion-5:-ms-input-placeholder {
  color: transparent;
}

.emotion-5::placeholder {
  color: transparent;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5:focus::-webkit-input-placeholder {
  color: #686BB3;
}

.emotion-5:focus::-moz-placeholder {
  color: #686BB3;
}

.emotion-5:focus:-ms-input-placeholder {
  color: #686BB3;
}

.emotion-5:focus::placeholder {
  color: #686BB3;
}

.emotion-5:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-5:focus-within+label,
.emotion-5:not(:placeholder-shown)+label {
  font-weight: 700!important;
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
}

.emotion-5:focus-within+label {
  color: #1552DD;
}

.emotion-5:disabled {
  cursor: not-allowed;
}

.emotion-5:focus+label,
.emotion-5:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -82%) scale(0.8);
  -moz-transform: translate(0.1875rem, -82%) scale(0.8);
  -ms-transform: translate(0.1875rem, -82%) scale(0.8);
  transform: translate(0.1875rem, -82%) scale(0.8);
}

.emotion-6 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  color: #686BB3;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  right: 0.1875rem;
  margin: auto;
  white-space: nowrap;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-7 {
  position: absolute!important;
  bottom: 0;
  right: 0.25rem;
  top: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          style="width: 500px;"
        >
          <div>
            <div>
              <div
                class="emotion-2"
                data-testid="showcase"
              >
                <div
                  class="emotion-3"
                >
                  <div
                    class="emotion-4"
                  >
                    <input
                      aria-invalid="false"
                      class="emotion-5"
                      data-testid="input_showcase"
                      id="multiTextfield_11"
                      placeholder="Type and then press Enter"
                      tags=""
                      value=""
                    />
                    <label
                      class="emotion-6"
                      for="multiTextfield_11"
                    >
                      MultiTextField 
                    </label>
                  </div>
                  <div
                    class="emotion-7"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/TextField Playground smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #b9cdfc;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: 3.25rem;
  min-width: 8.75rem;
  background-color: #ffffff;
}

.emotion-3:hover {
  background-color: #F5F5FF;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 0.125rem #175bf5;
  background-color: #F5F5FF;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 0 0 0.75rem;
  padding-right: 0.75rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-6 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #1B214F;
  padding: 0;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6:focus::-moz-placeholder {
  color: transparent;
}

.emotion-6:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-6:focus::placeholder {
  color: transparent;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus-within+label,
.emotion-6:not(:placeholder-shown)+label {
  font-weight: 700!important;
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
}

.emotion-6:focus-within+label {
  color: #1552DD;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

.emotion-7 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  color: #686BB3;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  right: 0.1875rem;
  margin: auto;
  white-space: nowrap;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  opacity: 1;
  color: #686BB3;
  padding: 0.5rem 0 0;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-8 span {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding: 0;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            style="margin: 5px;"
          >
            <div
              style="width: 500px;"
            >
              <div>
                <div
                  class="emotion-3"
                >
                  <div
                    class="emotion-4"
                  >
                    <div
                      class="emotion-5"
                    >
                      <input
                        aria-describedby="textfield_12_hintMessage"
                        aria-invalid="false"
                        class="emotion-6"
                        data-testid="input"
                        id="textfield_12"
                        placeholder="Label"
                        value=""
                      />
                      <label
                        class="emotion-7"
                        for="textfield_12"
                      >
                        Label 
                      </label>
                    </div>
                  </div>
                </div>
                <div
                  class="emotion-8"
                  data-testid="error"
                >
                  <span
                    id="textfield_12_hintMessage"
                  >
                    Message in Text Field
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/TextField TextFieldWithDifferentStatuses smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #b9cdfc;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: 3.25rem;
  min-width: 8.75rem;
  background-color: #ffffff;
}

.emotion-3:hover {
  background-color: #F5F5FF;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 0.125rem #175bf5;
  background-color: #F5F5FF;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 0 0 0.75rem;
  padding-right: 0.75rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-6 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #1B214F;
  padding: 0;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6:focus::-moz-placeholder {
  color: transparent;
}

.emotion-6:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-6:focus::placeholder {
  color: transparent;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus-within+label,
.emotion-6:not(:placeholder-shown)+label {
  font-weight: 700!important;
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
}

.emotion-6:focus-within+label {
  color: #1552DD;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

.emotion-7 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  color: #686BB3;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  right: 0.1875rem;
  margin: auto;
  white-space: nowrap;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  opacity: 1;
  color: #686BB3;
  padding: 0.5rem 0 0;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-8 span {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding: 0;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.125rem #F882AC;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: 3.25rem;
  min-width: 8.75rem;
  background-color: #FFE7F0;
}

.emotion-9:hover {
  background-color: #FFB8D1;
}

.emotion-9:focus-within {
  box-shadow: 0 0 0 0.125rem #175bf5;
  background-color: #F5F5FF;
}

.emotion-13 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  color: #FF176B;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  right: 0.1875rem;
  margin: auto;
  white-space: nowrap;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  opacity: 1;
  color: #CB205D;
  padding: 0.5rem 0 0;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-14 span {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding: 0;
}

.emotion-15 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-16 {
  fill: #CB205D;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-16 path {
  fill: #CB205D;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #b9cdfc;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: 3.25rem;
  min-width: 8.75rem;
  background-color: #F5F5FF;
}

.emotion-17:hover {
  background-color: #F5F5FF;
}

.emotion-17:focus-within {
  box-shadow: 0 0 0 0.125rem #b9cdfc;
  background-color: #F5F5FF;
}

.emotion-18 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 0 0 0.75rem;
}

.emotion-18>div {
  position: relative;
}

.emotion-20 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #1B214F;
  padding: 0;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-20::-webkit-input-placeholder {
  color: transparent;
}

.emotion-20::-moz-placeholder {
  color: transparent;
}

.emotion-20:-ms-input-placeholder {
  color: transparent;
}

.emotion-20::placeholder {
  color: transparent;
}

.emotion-20:focus {
  outline: none;
}

.emotion-20:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-20:focus::-moz-placeholder {
  color: transparent;
}

.emotion-20:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-20:focus::placeholder {
  color: transparent;
}

.emotion-20:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-20:focus-within+label,
.emotion-20:not(:placeholder-shown)+label {
  font-weight: 700!important;
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
}

.emotion-20:focus-within+label {
  color: #1552DD;
}

.emotion-20:disabled {
  cursor: text;
}

.emotion-22 {
  min-width: 2.75rem;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: unset;
}

.emotion-24 {
  fill: #5f6c85;
  width: 1rem;
  height: 1rem;
}

.emotion-24 path {
  fill: #5f6c85;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            style="margin: 5px;"
          >
            <div>
              <div
                class="emotion-3"
              >
                <div
                  class="emotion-4"
                >
                  <div
                    class="emotion-5"
                  >
                    <input
                      aria-describedby="textfield_7_hintMessage"
                      aria-invalid="false"
                      class="emotion-6"
                      data-testid="input"
                      id="textfield_7"
                      placeholder="Normal"
                    />
                    <label
                      class="emotion-7"
                      for="textfield_7"
                    >
                      Normal 
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="emotion-8"
                data-testid="error"
              >
                <span
                  id="textfield_7_hintMessage"
                >
                  Normal Message
                </span>
              </div>
            </div>
          </div>
          <div
            style="margin: 5px;"
          >
            <div>
              <div
                class="emotion-9"
              >
                <div
                  class="emotion-4"
                >
                  <div
                    class="emotion-5"
                  >
                    <input
                      aria-describedby="textfield_8_hintMessage"
                      aria-invalid="true"
                      class="emotion-6"
                      data-testid="input"
                      id="textfield_8"
                      placeholder="Error"
                    />
                    <label
                      class="emotion-13"
                      for="textfield_8"
                    >
                      Error 
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="emotion-14"
                data-testid="error"
              >
                <span
                  class="emotion-15"
                >
                  <svg
                    class="emotion-16"
                    fill="none"
                    viewBox="0 0 20 20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      id="warning"
                    >
                      <path
                        d="M9.9966 13.9851C10.2284 13.9851 10.4238 13.9067 10.5829 13.7499C10.742 13.5931 10.8215 13.3988 10.8215 13.167C10.8215 12.9352 10.7431 12.7397 10.5863 12.5807C10.4295 12.4216 10.2352 12.3421 10.0034 12.3421C9.7716 12.3421 9.57617 12.4205 9.4171 12.5773C9.25804 12.7341 9.1785 12.9283 9.1785 13.1601C9.1785 13.3919 9.2569 13.5874 9.41371 13.7465C9.57051 13.9055 9.76481 13.9851 9.9966 13.9851ZM10.0197 10.7976C10.2495 10.7976 10.4461 10.7159 10.6094 10.5525C10.7727 10.389 10.8544 10.1925 10.8544 9.96268V6.85584C10.8544 6.62608 10.7726 6.42948 10.6091 6.26605C10.4457 6.10262 10.249 6.0209 10.0192 6.0209C9.78931 6.0209 9.59274 6.10262 9.42944 6.26605C9.26613 6.42948 9.18448 6.62608 9.18448 6.85584V9.96268C9.18448 10.1925 9.26622 10.389 9.42969 10.5525C9.59317 10.7159 9.78983 10.7976 10.0197 10.7976ZM10.0013 18C8.89481 18 7.85478 17.79 6.88122 17.3701C5.90763 16.9502 5.06076 16.3803 4.34059 15.6604C3.62041 14.9405 3.05026 14.094 2.63016 13.1208C2.21005 12.1476 2 11.1078 2 10.0013C2 8.8915 2.21035 7.84835 2.63105 6.87186C3.05175 5.89538 3.62269 5.04596 4.34387 4.32362C5.06506 3.60129 5.91159 3.03343 6.88345 2.62006C7.8553 2.20669 8.89371 2 9.9987 2C11.1084 2 12.1514 2.2066 13.1278 2.61981C14.1042 3.03301 14.9536 3.60072 15.6761 4.32292C16.3986 5.04513 16.9666 5.8944 17.3799 6.87073C17.7933 7.84706 18 8.89025 18 10.0003C18 11.1104 17.7934 12.15 17.3802 13.1192C16.967 14.0884 16.3994 14.9337 15.6773 15.6552C14.9553 16.3766 14.1062 16.9478 13.1301 17.3687C12.1541 17.7896 11.1111 18 10.0013 18Z"
                        fill="#54587F"
                        id="Vector"
                      />
                    </g>
                  </svg>
                </span>
                <span
                  id="textfield_8_hintMessage"
                >
                  Error Message
                </span>
              </div>
            </div>
          </div>
          <div
            style="margin: 5px;"
          >
            <div>
              <div
                class="emotion-17"
              >
                <div
                  class="emotion-18"
                >
                  <div
                    class="emotion-5"
                  >
                    <input
                      aria-describedby="textfield_9_hintMessage"
                      aria-invalid="false"
                      class="emotion-20"
                      data-testid="input"
                      disabled=""
                      id="textfield_9"
                      placeholder="Read-only"
                      readonly=""
                    />
                    <label
                      class="emotion-7"
                      for="textfield_9"
                    >
                      Read-only 
                    </label>
                  </div>
                  <div
                    aria-hidden="false"
                    class="emotion-22"
                  >
                    <span
                      class="emotion-15"
                    >
                      <svg
                        class="emotion-24"
                        fill="none"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          id="Global Icons/Lock"
                        >
                          <path
                            d="M18 8.66667H17V6.7619C17 4.13333 14.76 2 12 2C9.24 2 7 4.13333 7 6.7619V8.66667H6C4.9 8.66667 4 9.52381 4 10.5714V20.0952C4 21.1429 4.9 22 6 22H18C19.1 22 20 21.1429 20 20.0952V10.5714C20 9.52381 19.1 8.66667 18 8.66667ZM12 17.2381C10.9 17.2381 10 16.381 10 15.3333C10 14.2857 10.9 13.4286 12 13.4286C13.1 13.4286 14 14.2857 14 15.3333C14 16.381 13.1 17.2381 12 17.2381ZM15.1 8.66667H8.9V6.7619C8.9 5.13333 10.29 3.80952 12 3.80952C13.71 3.80952 15.1 5.13333 15.1 6.7619V8.66667Z"
                            fill="black"
                            id="Vector"
                          />
                        </g>
                      </svg>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="emotion-8"
                data-testid="error"
              >
                <span
                  id="textfield_9_hintMessage"
                >
                  Normal Message
                </span>
              </div>
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/TextField TextFieldWithIcons smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #b9cdfc;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: 3.25rem;
  min-width: 8.75rem;
  background-color: #ffffff;
}

.emotion-3:hover {
  background-color: #F5F5FF;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 0.125rem #175bf5;
  background-color: #F5F5FF;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 0 0 0.75rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-6 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #1B214F;
  padding: 0;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6:focus::-moz-placeholder {
  color: transparent;
}

.emotion-6:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-6:focus::placeholder {
  color: transparent;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus-within+label,
.emotion-6:not(:placeholder-shown)+label {
  font-weight: 700!important;
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
}

.emotion-6:focus-within+label {
  color: #1552DD;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

.emotion-7 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  color: #686BB3;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  right: 0.1875rem;
  margin: auto;
  white-space: nowrap;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-8 {
  min-width: 2.75rem;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: unset;
}

.emotion-15 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-16 {
  fill: #5f6c85;
  width: 1rem;
  height: 1rem;
}

.emotion-16 path {
  fill: #5f6c85;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            style="margin: 5px;"
          >
            <div>
              <div
                class="emotion-3"
              >
                <div
                  class="emotion-4"
                >
                  <div
                    class="emotion-5"
                  >
                    <input
                      aria-invalid="false"
                      class="emotion-6"
                      data-testid="input"
                      id="textfield_4"
                      placeholder="Label"
                    />
                    <label
                      class="emotion-7"
                      for="textfield_4"
                    >
                      Label 
                    </label>
                  </div>
                  <div
                    aria-hidden="false"
                    class="emotion-8"
                  >
                    <img
                      height="16"
                      src="https://brandmark.io/logo-rank/random/pepsi.png"
                      style="background: red;"
                      width="16"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="margin: 5px;"
          >
            <div>
              <div
                class="emotion-3"
              >
                <div
                  class="emotion-4"
                >
                  <div
                    class="emotion-5"
                  >
                    <input
                      aria-invalid="false"
                      class="emotion-6"
                      data-testid="input"
                      id="textfield_5"
                      placeholder="Label"
                    />
                    <label
                      class="emotion-7"
                      for="textfield_5"
                    >
                      Label 
                    </label>
                  </div>
                  <div
                    aria-hidden="false"
                    class="emotion-8"
                  >
                    <span
                      class="emotion-15"
                    >
                      <svg
                        class="emotion-16"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                        xmlns:xlink="http://www.w3.org/1999/xlink"
                      >
                        <g
                          fill="none"
                          fill-rule="evenodd"
                          id="\\uD83D\\uDD36-Symbols"
                          stroke="none"
                          stroke-width="1"
                        >
                          <g
                            fill="#232323"
                            id="Keyword"
                          >
                            <path
                              d="M15.7038518,2 C19.1804706,2 22,4.84920353 22,8.36758353 C22,11.8836471 19.1804706,14.7351659 15.7038518,14.7351659 C15.1921471,14.7351659 14.6987576,14.6657024 14.2236847,14.5499271 L14.2236847,14.5499271 L13.3319212,15.4518094 L10.0945565,15.4518094 L10.0945565,18.7259047 L6.85719176,18.7259047 L6.85719176,22 L2,22 L2,17.0888565 L9.51073176,9.49059294 C9.44662588,9.12590471 9.40770471,8.75195412 9.40770471,8.36758353 C9.40770471,4.84920353 12.2260894,2 15.7038518,2 Z M17.3511529,4.77626588 C16.4032965,4.77626588 15.6340224,5.55311176 15.6340224,6.51288 C15.6340224,7.47149059 16.4032965,8.24949294 17.3511529,8.24949294 C18.3001541,8.24949294 19.0682847,7.47149059 19.0682847,6.51288 C19.0682847,5.55311176 18.3001541,4.77626588 17.3511529,4.77626588 Z"
                            />
                          </g>
                        </g>
                      </svg>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/TextField TextFieldWithLabelAndPlaceholder smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #b9cdfc;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: 3.25rem;
  min-width: 8.75rem;
  background-color: #ffffff;
}

.emotion-3:hover {
  background-color: #F5F5FF;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 0.125rem #175bf5;
  background-color: #F5F5FF;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 0 0 0.75rem;
  padding-right: 0.75rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-6 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #1B214F;
  padding: 0;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6:focus::-moz-placeholder {
  color: transparent;
}

.emotion-6:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-6:focus::placeholder {
  color: transparent;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus-within+label,
.emotion-6:not(:placeholder-shown)+label {
  font-weight: 700!important;
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
}

.emotion-6:focus-within+label {
  color: #1552DD;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

.emotion-7 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  color: #686BB3;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  right: 0.1875rem;
  margin: auto;
  white-space: nowrap;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-11 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #1B214F;
  padding: 0;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-11::-webkit-input-placeholder {
  color: transparent;
}

.emotion-11::-moz-placeholder {
  color: transparent;
}

.emotion-11:-ms-input-placeholder {
  color: transparent;
}

.emotion-11::placeholder {
  color: transparent;
}

.emotion-11:focus {
  outline: none;
}

.emotion-11:focus::-webkit-input-placeholder {
  color: #686BB3;
}

.emotion-11:focus::-moz-placeholder {
  color: #686BB3;
}

.emotion-11:focus:-ms-input-placeholder {
  color: #686BB3;
}

.emotion-11:focus::placeholder {
  color: #686BB3;
}

.emotion-11:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-11:focus-within+label,
.emotion-11:not(:placeholder-shown)+label {
  font-weight: 700!important;
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
}

.emotion-11:focus-within+label {
  color: #1552DD;
}

.emotion-11:disabled {
  cursor: not-allowed;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            style="margin: 5px;"
          >
            <div>
              <div
                class="emotion-3"
              >
                <div
                  class="emotion-4"
                >
                  <div
                    class="emotion-5"
                  >
                    <input
                      aria-invalid="false"
                      class="emotion-6"
                      data-testid="input"
                      id="textfield_1"
                      placeholder="Label"
                    />
                    <label
                      class="emotion-7"
                      for="textfield_1"
                    >
                      Label 
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="margin: 5px;"
          >
            <div>
              <div
                class="emotion-3"
              >
                <div
                  class="emotion-4"
                >
                  <div
                    class="emotion-5"
                  >
                    <input
                      aria-invalid="false"
                      class="emotion-11"
                      data-testid="input"
                      id="textfield_2"
                      placeholder="Placeholder "
                    />
                    <label
                      class="emotion-7"
                      for="textfield_2"
                    >
                      Label 
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;
